--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       <!-- Roboto & Josefin Sans Font -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Roboto:wght@700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>TætPåDato</title>
   </head>
   <body>
